# TFG-FlashAttention

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt
src/cpp/: torch_bind.cpp  v1.cu
src/cpp/headers/: baseline_implementation_cpu.hpp  baseline_implementation_gpu.hpp  common_types.hpp  utilities.hpp  v1_implementation.hpp
src/py/: gpt_download.py  model_inference.py  setup.py  triton_implementation.py
test/cpp/: test_cuda  test_cuda.cu  test_naive_implementation  test_naive_implementation.cu
test/py/: test_cuda_implementation.py  test_triton_implementation.py
