[project]
name = "tfg-flashattention"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "pytest>=9.0.3",
    "tensorflow>=2.21.0",
    "tiktoken>=0.12.0",
    "tqdm>=4.67.3",
    "triton>=3.6.0",
]
